--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skillify</title>
+    <script src="https://meet.jit.si/external_api.js"></script>
   </head>
   <body>
     <div id="root"></div>
